--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,7 @@
     border: 2px solid goldenrod;
     background-color: aquamarine;
     border-radius: 20px;
-    padding: 20px ;
-    
+    text-align: center;
+    padding: 15px;
 }
-.countries{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-}
+
